--- a/index.html
+++ b/index.html
@@ -1,38 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="assets\style.css" />
     <title>Work Day Scheduler</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+        <!-- Timeblocks go here -->
+        <div class="row d-flex time-block mb-3" id="hour9">
+            <div class="col border-right border-top bg-light">
+                <p class="align-self-center hour">9AM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-sm-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+
+        <div class="row d-flex time-block mb-3" id="hour10">
+            <div class="col border-right border-bottom bg-light">
+                <p class="align-self-center hour">10AM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-sm-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+
+        <div class="row d-flex time-block mb-3" id="hour11">
+            <div class="col border-right border-bottom bg-light">
+                <p class="align-self-center hour">11AM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-sm-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+
+        <div class="row d-flex time-block mb-3" id="hour12">
+            <div class="col border-right border-bottom bg-light">
+                <p class="align-self-center hour">12PM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-sm-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+
+        <div class="row d-flex time-block mb-3" id="hour13">
+            <div class="col border-right border-bottom bg-light">
+                <p class="align-self-center hour">1PM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-sm-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+
+        <div class="row d-flex time-block mb-3" id="hour14">
+            <div class="col border-right border-bottom bg-light">
+                <p class="align-self-center hour">2PM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-sm-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+
+        <div class="row d-flex time-block mb-3" id="hour15">
+            <div class="col border-right border-bottom bg-light">
+                <p class="align-self-center hour">3PM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-sm-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+
+        <div class="row d-flex time-block mb-3" id="hour16">
+            <div class="col border-right border-bottom bg-light">
+                <p class="align-self-center hour">4PM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
+
+        <div class="row d-flex time-block mb-3" id="hour17">
+            <div class="col border-right border-bottom bg-light">
+                <p class="align-self-center hour">5PM</p>
+            </div>
+            <textarea name="New Event" id="event-bg" placeholder="New Event" class="col-lg-10 col-md-6 col-sm-4"></textarea>
+            <button class="col bg-info text-center rounded-right saveBtn"><i class="fa-solid fa-floppy-disk"></i></button>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+    <script src="assets\script.js"></script>
+</body>
+
 </html>
